fixed link wrapping

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -124,6 +124,7 @@
 
 
 .main_links {
+	flex-wrap:wrap;
 	position: relative;
 	z-index: 2;
 	display: flex;
